--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,6 @@
     color: #ffffff !important;
 }
 
-/* menu */
-
 header {
     background: url("../asset/famille-hiver-neige-ambiance-311.jpg ") no-repeat fixed center center / cover;
     height: 100vh;
@@ -87,7 +85,7 @@ main section div {
     display: flex;
     flex-direction: row;
     background-color: #ffffff;
-    justify-content: space-around;
+    flex-wrap: wrap;
     padding: 1rem;
 }
 
