--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,20 @@
 :root {
-    --fontColor: #222222;
-    --fontColorHover: #ffffff;
-}
-
-.active {
-    background: #222222;
-    color: #ffffff !important;
+    --navBgColor: rgba(255, 255, 255, 0.8);
+    --mainBorderColor: #D3D3D3;
+    --mainH2Color: #787878;
+    --navBoxShadowColor: #808080;
 }
 
 header {
     background: url("../asset/famille-hiver-neige-ambiance-311.jpg ") no-repeat fixed center center / cover;
     height: 100vh;
     width: 100%;
-    margin-top: 6rem;
+    margin: 6rem 0;
 }
 
 header h1 {
     position: absolute;
-    color: white;
+    color: #ffffff;
     font-size: 11rem;
     font-weight: 1000;
     width: 100%;
@@ -28,12 +25,12 @@ header h1 {
 header nav ul {
     display: flex;
     position: fixed;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: var(--navBgColor);
     top: 0;
     width: 100%;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0 0.3rem gray;
+    box-shadow: 0 0 0.3rem var(--navBoxShadowColor);
     z-index: 1;
 }
 
@@ -46,16 +43,17 @@ header nav ul li:first-child img {
     margin-left: 2rem;
 }
 
-header nav ul li:not(:first-child):not(:last-child) a {
+header nav ul li:not(:first-child) a {
     display: inline-block;
     padding: 2rem;
-    color: black;
+    color: #222222;
     text-transform: uppercase;
 }
 
-header nav ul li:not(:first-child):not(:last-child) a:hover {
+header nav ul li:not(:first-child) a:hover {
     background-color: #282828;
     color: #ffffff;
+    transition: ease 0.2s;
 }
 
 header nav ul li:last-child {
@@ -63,9 +61,8 @@ header nav ul li:last-child {
 }
 
 main {
-    margin-top: 6rem;
-    padding-top: 2.5rem;
-    border: solid 0.1rem #D3D3D3;
+    padding-top: 3rem;
+    border: solid 0.1rem var(--mainBorderColor);
 }
 
 main section {
@@ -77,7 +74,7 @@ main section h2 {
     text-align: center;
     font-size: 5.5rem;
     margin: 2rem;
-    color: #787878;
+    color: var(--mainH2Color);
     font-weight: 1000;
 }
 
@@ -99,10 +96,6 @@ main section div article img {
     height: 55%;
     object-fit: cover;
     clip-path: polygon(0 0, 100% 0%, 100% 91%, 0 100%, 0% 50%);
-}
-
-main section div article img:hover {
-    clip-path: none;
 }
 
 main section div article h3 {
@@ -152,4 +145,9 @@ footer section a:visited, a[href^="mailto:"] {
 
 footer section p {
     text-align: center;
+}
+
+.active {
+    background: #222222;
+    color: #ffffff !important;
 }
